syntax = "proto3";

package esologs;

message LogEvent {
  uint64 time_us = 1;
  bytes prefix = 2;
  bytes command = 3;
  repeated bytes args = 4;

  enum Direction {
    RECEIVED = 0;
    SENT = 1;
  }
  Direction direction = 5;
}
